<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Push&amp;Pull</string>
     <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loading">Now Loading..</string>
    <string name="sex">sex : </string>
    <string name="nickname">Nickname(ID) : </string>
    <string name="next">next</string>
    <string name="mode">Mode Select</string>
    <string name="random">Random Chat</string>
    <string name="group">Group Chat</string>
    <string name="start">Start</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="randomloading">Please Wait.. Your Mate is Coming!</string>
    <string name="send">Send</string>
    <string name="score">Score : </string>
    <string name="failedchoose">failed..</string>
    <string name="retry">Retry</string>
    <string name="initTime">60</string>
    <string name="remainingTime">Remaining Time : </string>
    <string name="password">Password : </string>
    <string name="name">Name : </string>
    <string name="career">Career : </string>
    <string name="age">Age : </string>
    <string name="region">Region : </string>
    <string-array
        name="regionList">
        <item>Seoul</item>
        <item>Incheon</item>
        <item>Busan</item>
        <item>Gyeonggi</item>
        <item>Gangwon</item>
        <item>Choongcheong</item>
        <item>Jeolla</item>
        <item>Gyeongsang</item>   
        <item>Other..</item>
        </string-array>
    <string name="btype">Blood type : </string>
    <string name="submit">Submit</string>
    <string name="Time">Time : </string>
    <string name="plus">+</string>
    <string name="game_over">Game Over</string>
    <string name="voice_popup">Record Your Voice!!</string>
    <string name="stop">Stop</string>
    <string name="gameOver">Game Over</string>
    <string name="detail">Please Wait..registering</string>
    <string name="imageClose">Close</string>

</resources>
