<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id = "@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="1" >

    <TextView
        android:id="@+id/score"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:text="@string/score" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="240dp"
        android:layout_height="292dp"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="0" >

        <TextView
            android:id="@+id/chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

    </ScrollView>

    <Button
        android:id="@+id/plusBt"
        style="?android:attr/buttonStyleSmall"
        android:layout_column="0"
        android:layout_gravity="left|bottom"
        android:layout_row="0"
        android:text="@string/plus" />

    <EditText
        android:id="@+id/input"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_row="0"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/send"
        style="?android:attr/buttonStyleSmall"
        android:layout_column="0"
        android:layout_gravity="right|bottom"
        android:layout_row="0"
        android:text="@string/send" />

    <TextView
        android:id="@+id/time"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="0"
        android:text="@string/Time" />

    <Space
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="0" />

</GridLayout>